--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^1.5.0",
-    "@types/express": "^4.16.0",
-    "express": "^4.16.3",
-    "mustache": "^2.3.2",
+    "@types/lodash": "^4.14.116",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
-    "typeorm": "^0.2.7",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
@@ -38,8 +36,17 @@
     "webpack-dev-server": "^3.0.0",
     "webpack-merge": "^4.1.4"
   },
+  "peerDependencies": {
+    "@types/express": "^4.16.0",
+    "express": "^4.16.3",
+    "typeorm": "^0.2.7"
+  },
   "keywords": [
-    "typeorm", "typeorm-admin", "typescript", "admin", "ORM Admin"
+    "typeorm",
+    "typeorm-admin",
+    "typescript",
+    "admin",
+    "ORM Admin"
   ],
   "main": "dist/index.js",
   "scripts": {
